fix(style): rich text block li layout, spacing above footer

--- a/src/app/(frontend)/assets/css/footer.scss
+++ b/src/app/(frontend)/assets/css/footer.scss
@@ -2,7 +2,7 @@
   background-color: black;
   color: var(--secondary-color);
   // TODO: remove this once it's applied to all blocks in the CMS
-  // margin-top: 340px;
+  margin-top: 340px;
 
   .footer-container {
     padding: 84px;
