--- a/src/blocks/RichText/richtext.module.scss
+++ b/src/blocks/RichText/richtext.module.scss
@@ -18,6 +18,10 @@
 
     li {
       position: relative;
+      font-family: var(--ap);
+      font-size: 20px;
+      line-height: 33px;
+      margin-bottom: 38px;
     }
 
     li:before {
